# multipy

./: README.md  pyproject.toml
multipy/: __init__.py  actor.py  constraint.py  declarative.py  functional.py  logic.py  meta.py  reactive.py
