[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multipy"
version = "0.1.0"
description = "Multi-paradigm programming support for Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "TONY"}
]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

